# toy-mcp-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  index_document.py  main.py  pyproject.toml  requirements.txt  test_query.py
src/mcp_server_rag/: __init__.py  __main__.py  server.py
