[project]
name = "mcp-server-rag"
version = "0.1.0"
description = "A Model Context Protocol server providing RAG (Retrieval-Augmented Generation) functionality for document search and processing"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
keywords = ["mcp", "rag", "llm", "vector-search", "document-retrieval"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1.7",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.12",
    "langchain-text-splitters>=0.3.8",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "unstructured>=0.12.3",    # PDF 및 다양한 문서 형식 처리
    "pdf2image>=1.17.0",       # PDF 처리 의존성
    "pypdf>=4.0.1",            # PDF 텍스트 추출
    "markdown>=3.5.2",         # 마크다운 처리
    "pillow>=10.2.0",          # 이미지 처리 (PDF 변환)
]

[project.scripts]
mcp-server-rag = "mcp_server_rag:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_rag"]


[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]
